0.0.33_2 (yyyy-mm-dd)

    API / Behaviour Changes:
        - None.

    New Features:
        - None.

    Enhancements:
        - Move driver modules into seperate files (thanks to reneeb via
          CPAN Challenge).
        - Fleshed out the TODO file.
        - Cleaned up share directory handling
        - New development branch naming scheme documented in
          README.development
        - Cleaned up this file to remove lots of empty noise lines.

    Bug Fixes:
        - Write NULLs out explicitly instead of binding them. Lets
          "where => {col => undef}" work on PostgreSQL.

0.0.32 (2014-10-30)

    New Features:
        - New db->xvals() and sth->vals() methods.
        - LIKE / NOT LIKE support in HASHrefs.

    Bug Fixes:
        - Do not attempt to ROLLBACK or RELEASE inside a transaction.

0.0.30 (2014-09-26)

    Bug Fixes:
        - Make xarrayref() and xhashref() return an empty list () in
          list context when there are no rows.

0.0.28 (2014-09-23)

    Enhancements:
       - HASHref columns (for VALUES or SET or WHERE) are now sorted
         so that statements are consistent between runs.

    Bug Fixes:
       - None.

0.0.26 (2014-09-10)

    New Features:
        - Accept "column !" in hashref keys to simulate not-equals.

0.0.24 (2014-08-30)

   API Changes:
       - Methods RENAMED:
            xarray() -> xarrayref()
            xarrays() -> xarrayrefs()
            xhash() -> xhashref()
            xhashes() -> xhashrefs()
       - xarrayref() no longer returns a list. Functionality replaced
         by the new xlist() method.

   New Features:
      - New methods:
            xval() returns a single scalar
            xlist() returns first row as a list

0.0.22 (2014-06-30)

   API Changes:
       - $sth->xarrays in scalar context now returns undef on empty
         rows. Callers can check for definedness if need be before
         looping.

0.0.20 (2014-06-13)

    Bug Fixes: