@@ -457,6 +457,19 @@ sub log_debug {
     $log->debug($out);
 }
 
+sub log_warn {
+    my $self = shift;
+    my $sql  = (shift) . "\n";
+
+    my $sth = $self->prepare( $sql . ';' );
+    $sth->execute(@_);
+
+    my $out = join( ', ', @{ $sth->{NAME} } ) . "\n";
+    $out .= '  ' . ( '-' x length $out ) . "\n";
+    $out .= '  ' . DBI::neat_list($_) . "\n" for @{ $sth->fetchall_arrayref };
+    warn $out;
+}
+
 sub dump {
     my $self = shift;
     my $sth  = $self->prepare(shift);
